--- a/XJDomainLive/Podfile
+++ b/XJDomainLive/Podfile
@@ -9,4 +9,5 @@ pod 'LFLiveKit', '~> 2.5'
 pod 'Alamofire', '~> 4.1.0'
 pod 'SwiftyJSON', '~> 3.1.1'
 pod 'Kingfisher', '~> 3.2.1'
+pod 'MJRefresh', '~> 3.1.12'
 end
